fixed issue with missing footer and social links on mobile

--- a/src/styles/footer.module.css
+++ b/src/styles/footer.module.css
@@ -1,7 +1,12 @@
 .footer {
-    bottom: 0;
     left: 0;
     position: absolute;
     text-align: center;
     width: 100%;
+}
+
+@media only screen and (min-width: 700px) {
+    .footer {
+        bottom: 0;
+    }
 }
